--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "dependencies": {
     "extend-object": "^1.0.0",
-    "filetransfer": "^1.0.1",
+    "filetransfer": "https://github.com/markr79/jingle-filetransfer-session",
     "jingle-session": "^1.0.0",
     "rtcpeerconnection": "^3.0.0"
   },
@@ -32,7 +32,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/otalk/jingle-filetransfer-session.git"
+    "url": "https://github.com/markr79/jingle-filetransfer-session.git"
   },
   "scripts": {
     "audit": "make audit",
