--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "extend-object": "^1.0.0",
     "filetransfer": "https://github.com/markr79/filetransfer",
     "jingle-session": "^1.0.0",
-    "rtcpeerconnection": "^3.0.0"
+    "rtcpeerconnection": "https://github.com/markr79/RTCPeerConnection"
   },
   "devDependencies": {
     "browserify": "^5.11.1",
